# MPI-DHT

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  LICENSE  Readme.md
docs/: API.rst  CMakeLists.txt  conf.py  index.rst
include/DHT/: DHT.h
include/DHT_mpi/: DHT.h
include/DHT_ucx/: DHT.h  UCX_bcast_functions.h  UCX_init.h
include/LUCX/: Bootstrap.h  DHT.h  UCX_DataTypes.h
include/LUCX/MPI/: DHT.h
src/: CMakeLists.txt  DHT.c  access.c  accumulated.c  cleanup.c  collectives.c  file.c  init.c  ucx_communication.c  ucx_communication.h  ucx_functions.c  ucx_functions.h  ucx_init_deinit.c  ucx_init_deinit.h
src/DHT_mpi/: CMakeLists.txt  DHT.c
src/DHT_ucx/: CMakeLists.txt  DHT.c  access.c  accumulated.c  cleanup.c  collectives.c  dht_macros.h  file.c  init.c  ucx_communication.c  ucx_communication.h  ucx_init.c  ucx_init_deinit.c  ucx_init_deinit.h  ucx_lib.h  ucx_memory.c  ucx_worker_bcast.c
src/DHT_ucx/bcast_functions/: mpi_bcast.c
src/DHT_ucx/bootstrap_funcs/: mpi_bootstrap.c
src/DHT_ucx/ucx/: ucx_deinit.c  ucx_init.c  ucx_lib.h  ucx_memory.c  ucx_misc.c  ucx_rdma.c  ucx_rdma_setup.c  ucx_tagged.c  ucx_worker_bcast.c
src/bootstrap_funcs/: mpi.c  mpi_bootstrap.c
src/mpi/: access.c  cleanup.c  collectives.c  init.c  macros.h
src/ucx/: ucx_deinit.c  ucx_init.c  ucx_lib.h  ucx_misc.c  ucx_rdma.c  ucx_rdma_setup.c  ucx_tagged.c
test/: CMakeLists.txt  testInitDeinit.c  testReadWrite.c  testReadWriteMPI.c
